// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> renders to the page 1`] = `
<Fragment>
  <section
    className="counter"
  >
    <img
      className="show"
      src="palm.png"
    />
    <span
      className="down clicker"
      onClick={[Function]}
    >
       - 
    </span>
    <span
      className="count"
    >
      0
    </span>
    <span
      className="up clicker"
      onClick={[Function]}
    >
       + 
    </span>
    <img
      className="show"
      src="statue.png"
    />
  </section>
</Fragment>
`;

exports[`<Counter /> when the down is clicked renders to the page 1`] = `
<Fragment>
  <section
    className="counter"
  >
    <img
      className="hide"
      src="palm.png"
    />
    <span
      className="down clicker"
      onClick={[Function]}
    >
       - 
    </span>
    <span
      className="count"
    >
      -1
    </span>
    <span
      className="up clicker"
      onClick={[Function]}
    >
       + 
    </span>
    <img
      className="hide"
      src="statue.png"
    />
  </section>
</Fragment>
`;

exports[`<Counter /> when the up is clicked renders to the page 1`] = `
<Fragment>
  <section
    className="counter"
  >
    <img
      className="hide"
      src="palm.png"
    />
    <span
      className="down clicker"
      onClick={[Function]}
    >
       - 
    </span>
    <span
      className="count"
    >
      1
    </span>
    <span
      className="up clicker"
      onClick={[Function]}
    >
       + 
    </span>
    <img
      className="hide"
      src="statue.png"
    />
  </section>
</Fragment>
`;
